test-suite/tests/snapshots/cli_kmt_tests__kmt2001_invalid_version_value.snap
---
source: test-suite/tests/cli_kmt_tests.rs
expression: result.stderr
---
KLX9001

  × unknown lexing error: unknown lexing error
   ╭─[./tmp/cli_test_kmt2001_invalid_version_value/pkg/schema/types.ks:3:11]
 1 │ namespace types;
 2 │ 
 3 │ #[version(-1)]
   ·           ┬
   ·           ╰── unknown lexing error: unknown lexing error
 4 │ struct User {
 5 │     name: str
 6 │ };
   ╰────
